2025-06-03 - V3.3.3 - Config: `errorCallback` added - see Config.md 
2024-06-11 - V3.2.5 - trim error case results to 360 characters. useful for web tests where results can be huge
2024-01-03 - V3.2.3 - realm detect fix, better error reporting for "~ 'xxx'" operators
2023-12-27 - V3.2.2 - web-tests: support for content-encdoding: zstd,gzip,brotli; content-type (autodecoding): json,msgpack,igbinary - see web-tests/examples
2023-12-19 - V3.2.1 - alerting improved. "--alert" option added
                      broken web tests now have full url in error report
2023-12-18 - V3.2.0 - JSONPOST support added (see web-tests)
                      default name: ".stest-init.php"
                      use it to setup testing environment
                      included AFTER default `init` file
2023-12-04 - v3.1.8 - optional additinal init file for tests added: 'stest-config.json': 'stest-init'
2017-01-?? - v3.0 - rewrite, available as composer package
2014-04-01 - v2.3 - support for foreach, array test syntax
2012-06-20 - v2.0 - githubbed, licensed as MIT. minor improvements
2011-08-24 - v1.3 - sets of minor changes, used in production
2011-??-?? - v1.0 - 15min simple but solid test script