@@ -1,5 +1,7 @@
 #!/usr/bin/env stest
 
 \STest::phpVersionPlus("8.4.0", "this script intentionally support PHP8.4+ versions");
+    NULL;
 
 1+1;
+    2;
